# context-aggregator

./: .gitignore  Makefile  context-aggregator.spec  context-ai.command.spec  context-ai.spec  context.yaml  main.py  pyproject.toml
app/: config.py  database.py  file_tree.py  paths.py  utils.py
app/common/: config.py  tokens.py  utils.py
app/sources/: clipboard.py  file_tree.py  paths.py
