[project]
name = "context-aggregator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.0",
    "fastapi>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyinstaller>=6.19.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
