[project]
name = "context-aggregator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pyinstaller>=6.19.0",
    "pyobjc-framework-cocoa>=12.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
